# han-opencv-exercises

./: .gitignore  CMakeLists.txt
src/: Exercise2_1a.cpp  Exercise2_1b.cpp  Exercise2_2a.cpp  Exercise2_2b.cpp  Exercise2_3.cpp
