# Config
cmake_minimum_required(VERSION 3.26)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
project( OpenCVExercises )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
# Opdrachten
add_executable( Exercise2_1a src/Exercise2_1a.cpp )
target_link_libraries( Exercise2_1a ${OpenCV_LIBS} )
add_executable( Exercise2_1b src/Exercise2_1b.cpp )
target_link_libraries( Exercise2_1b ${OpenCV_LIBS} )
add_executable( Exercise2_2a src/Exercise2_2a.cpp )
target_link_libraries( Exercise2_2a ${OpenCV_LIBS} )
add_executable( Exercise2_2b src/Exercise2_2b.cpp )
target_link_libraries( Exercise2_2b ${OpenCV_LIBS} )
add_executable( Exercise2_3 src/Exercise2_3.cpp )
target_link_libraries( Exercise2_3 ${OpenCV_LIBS} )